# librespot-raspotify

./: Cargo.toml
.github/workflows/: build.yaml
audio/: Cargo.toml
audio/src/: range_set.rs
audio/src/fetch/: mod.rs  receive.rs
connect/: Cargo.toml
connect/src/: spirc.rs
core/: Cargo.toml  build.rs
core/src/: authentication.rs  cache.rs  config.rs  keymaster.rs  session.rs  spclient.rs
core/src/connection/: mod.rs
core/src/mercury/: mod.rs
discovery/: Cargo.toml
discovery/src/: lib.rs  server.rs
examples/: playlist_tracks.rs
metadata/: Cargo.toml
metadata/src/: lib.rs
playback/: Cargo.toml
playback/src/: config.rs  convert.rs  lib.rs  normaliser.rs  player.rs  player_time.rs  resampler.rs  sample_pipeline.rs
playback/src/audio_backend/: alsa.rs  mod.rs  pipe.rs  pulseaudio.rs  subprocess.rs
playback/src/decoder/: passthrough_decoder.rs
playback/src/mixer/: alsamixer.rs  mappings.rs  softmixer.rs
protocol/: Cargo.toml  build.rs
src/: main.rs  player_event_handler.rs
