[package]
name = "librespot-core"
version = "0.4.2"
authors = ["Paul Lietar <paul@lietar.net>"]
build = "build.rs"
description = "The core functionality provided by librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2018"

[dependencies.librespot-protocol]
path = "../protocol"
version = "0.4.2"

[dependencies]
aes = "0.6"
base64 = "0.13"
byteorder = "1.4"
bytes = "1.4"
form_urlencoded = "1.1"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "bilock", "unstable", "sink"] }
hmac = "0.11"
httparse = "1.8"
http = "0.2"
hyper = { version = "0.14", features = ["client", "tcp", "http1"] }
hyper-proxy = { version = "0.9.1", default-features = false }
log = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.17.1"
pbkdf2 = { version = "0.8", default-features = false, features = ["hmac"] }
priority-queue = "1.3"
protobuf = "2.28.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"
shannon = "0.2.0"
thiserror = "1.0.40"
tokio = { version = "1.28", features = ["io-util", "net", "rt", "sync"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.3"
uuid = { version = "1.3", default-features = false, features = ["v4"] }

[build-dependencies]
rand = "0.8"
vergen = "3.2.0"

[dev-dependencies]
env_logger = "0.10"
tokio = {version = "1.28", features = ["macros"] }
