[package]
name = "librespot-protocol"
version = "0.4.2"
authors = ["Paul Liétar <paul@lietar.net>"]
build = "build.rs"
description = "The protobuf logic for communicating with Spotify servers"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2018"

[dependencies]
protobuf = "2.28.0"

[build-dependencies]
protobuf-codegen-pure = "2.28.0"
glob = "0.3.1"
